コメントを修正

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,6 @@
-# --- 開発環境（ローカル）用の設定見本 ---
-# このファイルをコピーして、ファイル名を「.env」に変更して使用してください。
-# ※「.env」ファイルはパスワードが含まれるため、絶対にGitHubにはアップロードしないでください。
-
-# Djangoのシークレットキー
-# 開発用なので、以下の適当な文字列のままで構いません
+#見本用
 SECRET_KEY=django-insecure-dev-key-dummy-text-for-team
 
-# --- 以下は必要に応じて設定（通常は変更不要） ---
-
-# データベース設定
-# 何も書かなければ自動的にローカルのSQLite（db.sqlite3）が使われます
 # DATABASE_URL=
-
-# 本番環境フラグ
-# 開発環境ではこの行をコメントアウト（無効化）したままにしてください
+#本番環境
 # RENDER=True
